Run ALTER EXTENSION on timescale extension on upgrade (#430)
* Run an ALTER EXTENSION on the timescale extension on upgrade

* Protect against sql injection

--- a/charts/thoras/tests/api_service_deployment_test.yaml
+++ b/charts/thoras/tests/api_service_deployment_test.yaml
@@ -68,3 +68,12 @@ tests:
       - equal:
           path: spec.template.metadata.annotations["custom-annotation"]
           value: "test-value"
+  - it: Should ensure default extensionVersion is substring of default imageTag
+    set:
+      metricsCollector:
+        timescale:
+          extensionVersion: "2.21.3"
+    asserts:
+      - equal:
+          path: spec.template.spec.initContainers[0].env[?(@.name == 'EXTENSION_VERSION')].value
+          value: "2.21.3"
