--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -51,6 +51,8 @@ spec:
                 key: host
           - name: DATABASE_URL
             value: "$(DATABASE_HOST)/thoras?sslmode=disable"
+          - name: EXTENSION_VERSION
+            value: "{{ .Values.metricsCollector.timescale.extensionVersion }}"
         command: ["/bin/sh", "-c"]
         args:
           - |
@@ -69,6 +71,14 @@ spec:
               echo "Failed to connect to database after $max_retries retries"
               exit 1
             fi
+
+            # Update the timescale extension first
+            # Validate version format (only allow alphanumeric, dots, and hyphens)
+            if ! echo "$EXTENSION_VERSION" | grep -qE '^[0-9]+\.[0-9]+\.[0-9]+$'; then
+              echo "Invalid extension version format: $EXTENSION_VERSION"
+              exit 1
+            fi
+            /usr/bin/psql $DATABASE_URL -c "ALTER EXTENSION timescaledb UPDATE TO '$EXTENSION_VERSION';"
 
             # run any migrations, accounting for upgrade/downgrade scenarios
             ./scripts/migrate_database.sh
